--- a/index.html
+++ b/index.html
@@ -17,21 +17,43 @@
 </head>
 
 <body>
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-4">GifTastic</h1>
-            <p class="lead">Search a term to find a cool Gif.</p>
+    <div class="container">
+        <!-- Content here -->
+
+        <div class="jumbotron jumbotron-fluid">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="container">
+                        <h1 class="display-4">GifTastic</h1>
+                        <p class="lead">Search a term to find a cool Gif.</p>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <!-- Load icon library -->
+                    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+                    <div class="col-sm-6">
+                        <!-- The form -->
+                        <form class="example" action="action_page.php">
+                            <input type="text" placeholder="Search.." name="search">
+                            <button type="submit">
+                                <i class="fa fa-search"></i>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
         </div>
-        <!-- Load icon library -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <div class="col-sm-4">
-            <!-- The form -->
-            <form class="example" action="action_page.php">
-                <input type="text" placeholder="Search.." name="search">
-                <button type="submit">
-                    <i class="fa fa-search"></i>
-                </button>
-            </form>
+
+
+        <div class="row text-center">
+            <div class="col-sm-12">
+                <div id="DynamButtons"></div>
+            </div>
+            <div class="col-sm-12">
+                <div id="gifDisplay"></div>
+            </div>
         </div>
     </div>
 
