--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
+     <!-- JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+       <!-- JavaScript BootStrap -->
+       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+       <script src="assets/javascript/app.js"></script>
 </head>
 
 <body>
@@ -33,13 +38,8 @@
                     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
                     <div class="col-sm-6">
-                        <!-- The form -->
-                        <form class="example" action="action_page.php">
-                            <input type="text" placeholder="Search.." name="search">
-                            <button type="submit">
-                                <i class="fa fa-search"></i>
-                            </button>
-                        </form>
+                        <input type="text" placeholder="Search" id="form-input">
+                        <input type="button" value="Add" id="form-submit">
                     </div>
                 </div>
             </div>
@@ -57,10 +57,7 @@
         </div>
     </div>
 
-    <!-- JavaScript BootStrap -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- JavaScript -->
-    <script src="assets/javascript/app.js"></script>
+    
 </body>
 
 </html>
