--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div class="row text-center">
             <div class="col-sm-12">
-                <div id="DynamButtons"></div>
+                <div id="Buttons"></div>
             </div>
             <div class="col-sm-12">
                 <div id="gifDisplay"></div>
